add color, sanitize ids

--- a/style.css
+++ b/style.css
@@ -65,3 +65,11 @@ body{
 #delete, #clear{
     width:140px;
 }
+
+#equals{
+    background-color: lightgreen;
+}
+
+#clear{
+    background-color:lightcoral;
+}
