--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body{
     border-style:solid;
     border-color:black;
     border-radius:12px;
+    box-shadow:10px 10px gray;
 }
 
 .display{
@@ -39,7 +40,7 @@ body{
 }
 
 #first-number-display, #second-number-display, #operand-display{
-    padding:6px;
+    padding:6px 6px 6px 0px;
     font-size:22px;
 }
 
