--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body{
     justify-items:center;
     align-items:center;
     width:360px;
-    height:560px;
+    height:fit-content;
+    min-height:560px;
     background-color:bisque;
     border-style:solid;
     border-color:black;
@@ -25,7 +26,7 @@ body{
     display:flex;
     flex-direction: column;
     width: 320px;
-    height:100px;
+    height:fit-content;
     background-color: azure;
     border-radius:10px;
     border-style:solid;
@@ -37,17 +38,27 @@ body{
     display:flex;
     flex-direction: row;
     justify-content: end;
+    flex-wrap: wrap;
+    min-height:50px;
+    max-width:320px;
 }
 
 #first-number-display, #second-number-display, #operand-display{
     padding:6px 6px 6px 0px;
     font-size:22px;
+    max-width: 290px;
+    word-wrap:break-word;
+    word-break:break-all;
+    text-align:end;
 }
 
 .result-display{
     padding: 6px;
     text-align:end;
+    word-wrap:break-word;
+    word-break:break-all;
     font-size: 32px;
+    min-height:50px;
 }
 
 .buttons-container{
