add inset shadow to the screen, because why not

--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ body{
     border-style:solid;
     border-color:black;
     margin:20px 0;
+    box-shadow:inset 4px 4px lightblue;
 }
 
 .real-time-display{
